<resources>
    <string name="action_settings">Settings</string>
    <!-- Text For UI -->
    <string name="groups">Groups</string>
    <string name="lists">Lists</string>
    <string name="add">Add</string>
    <string name="tasks">Tasks</string>
    <string name="users">Users</string>
    <string name="update_list">Update List</string>
    <string name="update_task">Update Task</string>
    <string name="update_group">Update Group</string>
    <string name="signout">Sign Out</string>
    <string name="gps">GPS</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_name">Room Mate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up"><u>New User? Sign Up here!</u></string>
    <string name="hello_world">
        Hello World!
    </string>
    <string name="welcome_text">
        Welcome to Room Mate! Sign in to get started!
    </string>
    <string name="new_account">New Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="full_name">Full Name</string>
    <string name="new_task">New Task</string>
    <string name="new_list">New List</string>
    <string name="new_group">New Group</string>
    <string name="new_user">New User</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="exit">Exit</string>
    <string name="signup">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>