...
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/sign_up"
            android:textSize="14sp"

            android:textAlignment="center"
            android:id="@+id/signupText"
            android:textColor="@color/red"
            android:layout_marginBottom="20dp"/>




...
